# mlx-audio-primitives

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  NUMERICAL_ACCURACY.md  README.md  SECURITY.md  pyproject.toml  setup.py
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: benchmark.yml  ci.yml  release.yml
benchmarks/: README.md  __init__.py  baseline.py  bench_cache.py  bench_cpp_extension.py  bench_features.py  bench_griffinlim.py  bench_mel.py  bench_mfcc.py  bench_resample.py  bench_scaling.py  bench_stft.py  bench_windows.py  platform.py  run.py  schemas.py  utils.py
csrc/: CMakeLists.txt  README.md  bindings.cpp  bindings_wrappers.h
csrc/metal/: frame_signal.metal  mel_filterbank.metal  overlap_add.metal  pad_signal.metal  windows.metal
csrc/primitives/: autocorrelation.cpp  autocorrelation.h  dct.cpp  dct.h  frame_signal.cpp  frame_signal.h  mel_filterbank.cpp  mel_filterbank.h  metal_utils.h  overlap_add.cpp  overlap_add.h  pad_signal.cpp  pad_signal.h  resample.cpp  resample.h  spectral.cpp  spectral.h  windows.cpp  windows.h
docs/: QUICKSTART.md
mlx_audio_primitives/: __init__.py  _extension.py  _frame_impl.py  _memory_profiler.py  _profiler.py  _validation.py  convert.py  features.py  filterbanks.py  framing.py  griffinlim.py  mel.py  mfcc.py  pitch.py  resample.py  stft.py  windows.py
mlx_audio_primitives.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_convert.py  test_cpp_extension.py  test_features.py  test_filterbanks.py  test_framing.py  test_griffinlim.py  test_mathematical_properties.py  test_mel.py  test_mfcc.py  test_pitch.py  test_resample.py  test_stft.py  test_torchaudio_crossval.py  test_windows.py
